# labelbox-python

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .yapfignore  CHANGELOG.md  CODEOWNERS  CONTRIB.md  CONTRIBUTING.md  CONTRIBUTING_new.md  Dockerfile  Dockerfile_test  Export v2 project - roof-wear-highres - 2_22_2024 (1).ndjson  LICENSE  LICENSES  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  annotation_type_basics.ipynb  build-docs.sh  conftest.py  converters.ipynb  e2e_tests_codefresh_pipeline.yaml  events_demo.py  label_containers.ipynb  lb_logger.py  lbx_prompt.txt  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.html  test.ipynb  (+5 more)
examples/: CONTRIBUTING.md  Makefile  README.md  format_notebooks.py  pyproject.toml  sdk4_datasets_and_datarows.py  template.ipynb  test.ipynb  test_notebooks.py
examples/annotation_import/: audio.ipynb  basics.ipynb  conversational.ipynb  conversational_LLM.ipynb  conversational_LLM_data_generation.ipynb  dicom.ipynb  html.ipynb  image.ipynb  import_labeled_dataset_image.ipynb  pdf.ipynb  pdf_mal.ipynb  subclasses.ipynb  text.ipynb  tiled.ipynb  video.ipynb
examples/annotation_types/: Tiled_Imagery_Basics.ipynb  annotation_type_basics.ipynb  basics.ipynb  coco.ipynb  converters.ipynb  label_containers.ipynb  mal_using_annotation_types.ipynb  mal_with_annotation_types.ipynb  tiled_imagery_basics.ipynb
examples/assets/: mapillary_sample.csv
examples/basics/: Export_V1_to_V2_migration_support.ipynb  Ontology.ipynb  README.MD  basics.ipynb  batches.ipynb  custom_embeddings.ipynb  custom_embeddings_sdk.ipynb  data_row_metadata.ipynb  data_rows.ipynb  datasets.ipynb  export_data.ipynb  export_v1_migration_support.ipynb  export_v1_to_v2_migration_support.ipynb  export_v1_v2_migration_support.ipynb  file  getting_started.ipynb  labels.ipynb  ontologies.ipynb  ontology.ipynb  payload.ndjson  projects.ipynb  quick_start.ipynb  user_management.ipynb
examples/exports/: composite_mask_export.ipynb  export_data.ipynb  export_v1_to_v2_migration_support.ipynb  exporting_to_CSV.ipynb  exporting_to_CSV_tutorial.ipynb  exporting_to_csv.ipynb
examples/extras/: classification-confusion-matrix.ipynb  classification_confusion_matrix.ipynb  html_api_custom_editor.ipynb
examples/foundry/: foundry_basics.ipynb  image_classification.ipynb  object_detection.ipynb  text_entities.ipynb  text_summarization.ipynb
examples/integrations/BLIP-2/: BLIP_Pre_labels_Labelbox.ipynb
examples/integrations/databricks/: api_key_db_template.ipynb  labelbox_databricks_example.dbc  labelbox_databricks_example.html  labelbox_databricks_example.ipynb  labelbox_databricks_example.py  readme.md
examples/integrations/detectron2/: README.md  coco_object.ipynb  coco_panoptic.ipynb  coco_utils.py
examples/integrations/gcp/: README.md  build.sh  configure_model.sh  docker-compose.yaml  run.sh
examples/integrations/gcp/deployment/: Dockerfile  configure_deployment.py  create_secrets.py  deploy.sh  refresh_secrets.sh  reload_coordinator.sh  teardown.sh
examples/integrations/gcp/test/: test_bbox.py  test_image_classification.py  test_image_multi_classification.py  test_local.py  test_text_classification.py
examples/integrations/gcp/utils/: requirements.txt  resource_manager.py
examples/integrations/huggingface/: huggingface.ipynb  huggingface_custom_embeddings.ipynb  payload.ndjson
examples/integrations/langchain/: langchain.ipynb
examples/integrations/sam/: meta_sam.ipynb  meta_sam_labelbox.ipynb  meta_sam_labelbox_video.ipynb  meta_sam_video.ipynb
examples/integrations/tlt/: README.md  labelbox_upload.ipynb
examples/integrations/tlt/proto/: __init__.py  adam_optimizer_config_pb2.py  augmentation_config_pb2.py  bbox_rasterizer_config_pb2.py  cost_function_config_pb2.py  cost_scaling_config_pb2.py  dataset_config_pb2.py  dataset_export_config_pb2.py  (+15 more)
examples/integrations/yolo/: import_yolo_annotations.ipynb  import_yolov8_annotations.ipynb
examples/label_export/: images.ipynb  text.ipynb  video.ipynb
examples/llm_asset_import/: conversational_MAL_GT.ipynb  conversational_MEA.ipynb
examples/model_assisted_labeling/: Model_Diagnostics_Demo.ipynb  Model_Diagnostics_Guide.ipynb  debugging_mal.ipynb  image_mal.ipynb  image_mal_utils.py  image_mea.ipynb  image_model.py  mal-with-subclasses.ipynb  mal_basics.ipynb  mal_introduction.ipynb  mal_with_subclasses.ipynb  mapillary_sample.csv  ndjson_utils.py  ner_mal.ipynb  tiled_image_annotation_import.ipynb  tiled_imagery_mal.ipynb  video_mal.ipynb
examples/model_diagnostics/: custom-metrics.ipynb  custom_metrics_basics.ipynb  custom_metrics_demo.ipynb  model_diagnostics_demo.ipynb  model_diagnostics_guide.ipynb
examples/model_experiments/: custom_metrics_basics.ipynb  custom_metrics_demo.ipynb  model_predictions_to_project.ipynb  model_slices.ipynb
examples/model_experiments/model_diagnostics/: custom_metrics_basics.ipynb  custom_metrics_demo.ipynb  model_diagnostics_demo.ipynb  model_diagnostics_guide.ipynb
examples/prediction_upload/: conversational_LLM_predictions.ipynb  conversational_predictions.ipynb  geospatial_predictions.ipynb  html_predictions.ipynb  image_predictions.ipynb  pdf_predictions.ipynb  text_predictions.ipynb  video_predictions.ipynb
examples/project_configuration/: README.md  live_multimodal_chat_project.ipynb  model_chat_evaluation_project.ipynb  model_eveluation_output.ipynb  multimodal_chat_project.ipynb  project_setup.ipynb  queue_management.ipynb  webhooks.ipynb
examples/scripts/: config.json  format_notebooks.py  generate_readme.py  tutorials.py  upload_documentation.py
libs/labelbox/: .yapfignore  CHANGELOG.md  Dockerfile  README.md  mypy.ini  pyproject.toml
libs/labelbox-internal-utils/: README.md  pyproject.toml
libs/labelbox/scripts/: update_sdk_version.sh
libs/labelbox/tests/: conftest.py  utils.py
libs/lbox-cli/: pyproject.toml
libs/lbox-clients/: Dockerfile  README.md  pyproject.toml
libs/lbox-example/: Dockerfile  pyproject.toml
(+1083 files in other folders)
