[metadata]
name = labelbox
version = 0.0.1dev0
description = A python library for interacting with labelbox.com
author = Feynman Liang
author_email = feynman@labelbox.com
license = Apache 2.0
url = https://github.com/Labelbox/labelbox-python
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Environment :: Console
    Topic :: Utilities
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License v2.0
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
install_requires =
    jinja2
    pillow
    rasterio
    requests
    shapely
    simplification

[options.extras_require]
testing =
    mypy
    numpy
    pylint
    pytest
    pytest-cov
    tox
    xmltodict

[options.packages.find]
include =
    labelbox.*

[test]
# py.test options when running `python setup.py test`
addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov-report html
    --cov-report term
    --cov=labelbox
    --junitxml=test-results/pytest/results.xml
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 1

[build_sphinx]
# Options for Sphinx build
source_dir = docs
build_dir = docs/_build

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[check-manifest]
ignore =
    .circleci
    .circleci/config.yml
