[project]
name = "examples"
version = "0.1.0"
description = "Labelbox Python Example Notebooks"
authors = [{ name = "Labelbox", email = "support@labelbox.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["jupyter>=1.0.0"]

[project.urls]
Homepage = "https://labelbox.com/"
Documentation = "https://labelbox-python.readthedocs.io/en/latest/"
Tutorials = "https://docs.labelbox.com/page/tutorials"
Repository = "https://github.com/Labelbox/labelbox-python/examples"
Issues = "https://github.com/Labelbox/labelbox-python/issues"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "yapf>=0.40.2",
    "black[jupyter]>=24.4.2",
    "databooks>=1.3.10",
]

[tool.rye.scripts]
clean = { chain = ["clean:databooks", "clean:black", "clean:format"] }
"clean:databooks" = 'databooks meta --no-rm-exec . --yes'
"clean:black" = 'black --line-length 80 .'
"clean:format" = { call = "scripts.format_notebooks" }
