[project]
name = "labelbox-internal-utils"
version = "0.1.0"
description = "Internal utils to the Labelbox SDK"
authors = [
    { name = "Labelbox", email = "engineering@labelbox.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/labelbox"]