[project]
name = "lbox-cli"
version = "0.1.0"
description = "A CLI tool for labelbox"
authors = [
    { name = "Labelbox", email = "engineering@labelbox.com" }
]
dependencies = [
    "tinydb>=4.8.0",
    "click>=8.1.7",
    "labelbox>=3.75.1",
]
readme = "README.md"
requires-python = ">= 3.8"

classifiers=[
    # How mature is this project?
    "Development Status :: 2 - Pre-Alpha",
    # Indicate who your project is intended for
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    # Pick your license as you wish
    "License :: OSI Approved :: Apache Software License",
     # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ml", "ai", "labelbox", "labeling", "llm", "machinelearning", "edu"]

[project.urls]
Homepage = "https://labelbox.com/"
Documentation = "https://labelbox-python.readthedocs.io/en/latest/"
Repository = "https://github.com/Labelbox/labelbox-python"
Issues = "https://github.com/Labelbox/labelbox-python/issues"
Changelog = "https://github.com/Labelbox/labelbox-python/blob/develop/libs/lbox-cli/CHANGELOG.md"

[project.scripts]
lbox = 'lbox.cli.main:cli'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
unit = "pytest tests/unit"
integration = "python -c \"import sys; sys.exit(0)\""

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lbox"]

[tool.pytest.ini_options]
addopts = "-rP -vvv --durations=20 --cov=lbox.cli --import-mode=importlib"
